# FishToucher

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: linxisa.example.json
docs/: agent-communication-sop.md  architecture.md  harness-optimization.md  linxisa-profile.md  protocol-research.md  roles.md  standard.md  steward-sop.md  threat-model.md
examples/: evidence.pass.json  invocation.pass.json  linxisa-current-blockers.json  linxisa-routing-example.json
examples/runs/harness-loop-001/: mailbox.jsonl
examples/runs/software-loop-001/: 00-sensor-report.json  01-work-packet.json  02-executor-ack.json  03-executor-result-initial.json  04-verifier-reject.json  05-sensor-feedback.json  06-executor-result-revised.json  07-verifier-accept.json  08-sensor-closeout.json  (+1 more)
prompts/: cross-stack-verification-engineer.md  deepseek-executor.md  gpt-architect.md  harness-auditor.md  harness-efficiency-engineer.md  independent-verifier.md  isa-architect.md  isa-verification-engineer.md  llvm-designer.md  llvm-verification-engineer.md  qemu-designer.md  qemu-verification-engineer.md  role-skill-curator.md  senior-coder.md  specialist-coder.md  steward.md  superproject-bringup-observer.md
schemas/: evidence.schema.json  flow.schema.json  invocation.schema.json  message.schema.json
src/fishtoucher/: __init__.py  cli.py  contracts.py  drivers.py  invocations.py  messages.py  planner.py  validator.py
tests/: test_drivers.py  test_invocations.py  test_messages.py  test_planner.py  test_validator.py
(+14 files in other folders)
