[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fishtoucher"
version = "0.1.0"
description = "Evidence-first multi-agent harness standard for LinxISA NPU development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Linx-ISA" }]
dependencies = []

[project.scripts]
fishtoucher = "fishtoucher.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
